--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -25,11 +25,9 @@ body:
     required: false
 
 
-- type: textarea
+- type: markdown
   attributes:
-    label: Community Note
-    description: |
+    value: |
+      ## Community Note
       * Please vote on this issue by adding a 👍 [reaction](https://blog.github.com/2016-03-10-add-reactions-to-pull-requests-issues-and-comments/) to the original issue to help the community and maintainers prioritize this request
       * If you are interested in working on this issue or have submitted a pull request, please leave a comment
-  validations:
-    required: true
