--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,7 +12,7 @@ jobs:
         id: release
         with:
           token: "${{ secrets.ACTION_TOKEN }}"
-          release-type: node
+          release-type: simple
 
       - uses: actions/checkout@v2
 
